tests/fixtures/esm/errors/non_relative/main.js
import { SaveButton } from 'components/save_button.js';

App.run({
    title: 'Non Relative Import Fixture',
    render: SaveButton
});
